<resources>
    <string name="app_name">KillsF</string>
    <string name="textViewTitle">Ｋｉｌｌ’Ｆ</string>
    <string name="buttonStart">Ｓｔａｒｔ</string>
    <string name="textViewSelectTitle">カードを５枚選択してください（カード情報参照は長押し）</string>
    <string name="ButtonNext">次へ</string>
    <string name="textViewChoiseTitle">カードを１枚選択してください</string>
    <string name="textViewEnemyTitle">あいてカード</string>
    <string name="textViewMyCardTitle">じぶんのカード</string>
    <string name="textViewWinCountTitle">勝ち数</string>
    <string name="textViewLoseCountTitle">負け数</string>

    <string name="buttonBattleAtack">攻撃</string>
    <string name="buttonBattleDefence">防御</string>
    <string name="buttonBattleSpecial">特殊</string>
    <string name="buttonBattleItem">アイテム</string>
    <string name="buttonBattleChange">入替</string>

    <string name="searchHint">検索したいカード名を入力</string>

    // intent用項目
    <string name="selectedItemPosition">selectedItemPosition</string>
    <string name="arriveMemberCount">arriveMemberCount</string>
    <string name="imagebuttonNumber">imagebuttonnumber</string>
    <string name="longClickItemPosition">longClickItemPosition</string>

    // カード枚数
    <string name="CardAllCount">6</string>

    // バトルメッセージ
    <string name="actionMSG">　のこうげき</string>
    <string name="role1">先鋒</string>
    <string name="role2">次鋒</string>
    <string name="role3">中堅</string>
    <string name="role4">副将</string>
    <string name="role5">大将</string>

    // 共通ステータスタイトル
    <string name="NameTitle">名前：</string>
    <string name="HpTitle">ＨＰ：</string>
    <string name="AtackTitle">攻撃力：</string>
    <string name="DefenceTitle">防御力</string>

    // カードステータス
    // ボスキャラ
    <string name="enemyAttackPower">40</string>
    <string name="enemySpecialPower">80</string>
    <string name="enemyHP">300</string>

    // 1人目
    <string name="CardName1">マツケン</string>
    <string name="HpStatus1">100</string>
    <string name="AtackStatus1">30</string>
    <string name="DefenceStatus1">30</string>
    <string name="DefenceTitle1">30</string>
    <string name="CharaDetail1">おばあちゃんやん！８０歳くらいかと思った！</string>

    // 2人目
    <string name="CardName2">ゆーへい</string>
    <string name="HpStatus2">100</string>
    <string name="AtackStatus2">20</string>
    <string name="DefenceStatus2">20</string>
    <string name="DefenceTitle2">20</string>
    <string name="CharaDetail2">雑魚が！やり方がきたねーんだよ！</string>

    // 3人目
    <string name="CardName3">やす</string>
    <string name="HpStatus3">100</string>
    <string name="AtackStatus3">10</string>
    <string name="DefenceStatus3">10</string>
    <string name="DefenceTitle3">10</string>
    <string name="CharaDetail3">Ｙａｓｕ＿Ｄｅｖｅｌｏｐｅｒ</string>

    // 4人目
    <string name="CardName4">ざこ１</string>
    <string name="HpStatus4">100</string>
    <string name="AtackStatus4">5</string>
    <string name="DefenceStatus4">5</string>
    <string name="DefenceTitle4">5</string>
    <string name="CharaDetail4">ざこ</string>

    // 5人目
    <string name="CardName5">ざこ２</string>
    <string name="HpStatus5">100</string>
    <string name="AtackStatus5">4</string>
    <string name="DefenceStatus5">4</string>
    <string name="DefenceTitle5">4</string>
    <string name="CharaDetail5">ざこ</string>

    // 6人目
    <string name="CardName6">ざこ３</string>
    <string name="HpStatus6">100</string>
    <string name="AtackStatus6">4</string>
    <string name="DefenceStatus6">4</string>
    <string name="DefenceTitle6">4</string>
    <string name="CharaDetail6">ざこ</string>

    // 7人目
    <string name="CardName7">もりぐ</string>
    <string name="HpStatus7">100</string>
    <string name="AtackStatus7">4</string>
    <string name="DefenceStatus7">4</string>
    <string name="DefenceTitle7">4</string>

</resources>
